--- a/notebooks/lv/tests/speckles.ipynb
+++ b/notebooks/lv/tests/speckles.ipynb
@@ -201,9 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53a0ce626cbd44dc859e793d136394ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(color='#fefefe', position=(49999.9999…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "lv_ideal.plot()"
    ]
@@ -258,6 +273,40 @@
    ],
    "source": [
     "interactive_speckles()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ceba59dd1164c33a373a7a262f78105",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(color='#fefefe', position=(49999.9999…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "70.90663846880035"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv_ideal.plot_longitudinal_distance([lv_ideal.REGIONS.ENDO], t=0.15)"
    ]
   },
   {
@@ -319,10 +368,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ExtendedDict(dict):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super(ExtendedDict, self).__init__(*args, **kwargs)\n",
+    "\n",
+    "\n",
+    "    def all(self, key):\n",
+    "        return {_k: val for _k, val in self.items() if key in _k}\n",
+    "\n",
+    "    def prefix(self, key, prefix):\n",
+    "        return {_k: val for _k, val in self.items() if (key in _k) and _k.startswith(prefix)}\n",
+    "\n",
+    "    def suffix(self, key, suffix):\n",
+    "        return {_k: val for _k, val in self.items() if (key in _k) and _k.endswith(suffix)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ExtendedDict()\n",
+    "\n",
+    "a[\"hey\"] = \"hey\"\n",
+    "a[\"hue\"] = \"hue\"\n",
+    "\n",
+    "a[\"hue_2\"] = \"hue2\"\n",
+    "\n",
+    "a[\"new_hue_2\"] = \"hue3r2\"\n",
+    "a[\"hue_2_new\"] = \"rjfhb\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'new_hue_2': 'hue3r2'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.suffix(\"hue\", \"new\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ExtendedDict' object has no attribute 'all'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/i/igornobrega/Documents/Project-Heart/notebooks/lv/tests/speckles.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bcirce.rc.usf.edu/home/i/igornobrega/Documents/Project-Heart/notebooks/lv/tests/speckles.ipynb#ch0000018vscode-remote?line=0'>1</a>\u001b[0m a\u001b[39m.\u001b[39;49mall()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ExtendedDict' object has no attribute 'all'"
+     ]
+    }
+   ],
+   "source": [
+    "a.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"LONG_ENDO\"\n",
+    "\"LONG_spk_id\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"LONG_ENDO\""
+   ]
   }
  ],
  "metadata": {
