--- a/notebooks/lv/tests/test_speckles.ipynb
+++ b/notebooks/lv/tests/test_speckles.ipynb
@@ -45,6 +45,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lv.set_region_from_intersections(\"ENDO_BORDER\", 30, [lv.REGIONS.BASE, lv.REGIONS.ENDO])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "spk = lv.create_speckles(\n",
+    "        collection=\"test2\",\n",
+    "        group=\"ENDO_BORDER\",\n",
+    "        name=\"test\",\n",
+    "        from_nodeset=\"ENDO_BORDER\",\n",
+    "        use_all_nodes=True,\n",
+    "        n_subsets=0,\n",
+    "        n_clusters=10,\n",
+    "        subsets_criteria=\"angles3\",\n",
+    "        t=0.0,\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot_speckles(spk, add_k_centers=True, k_bins=True, cmap=\"hot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot(\"surface\", \n",
+    "        scalars=\"ENDO_BORDER\",\n",
+    "        container=\"points\",\n",
+    "        show_edges=True,\n",
+    "        categories=True,\n",
+    "        split_sharp_edges=True,\n",
+    "        smooth_shading=False,\n",
+    "        pretty=False,\n",
+    "        cmap=\"jet\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import auto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "spk = lv.create_speckles(\n",
+    "        collection=\"test2\",\n",
+    "        group=\"base\",\n",
+    "        name=\"test\",\n",
+    "        from_nodeset=LV_SURFS.BASE,\n",
+    "        use_all_nodes=True,\n",
+    "        n_subsets=0,\n",
+    "        n_clusters=10,\n",
+    "        subsets_criteria=\"angles3\",\n",
+    "        t=0.0,\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot_speckles(spk, add_k_centers=True, k_bins=True, cmap=\"hot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "with open(\"../sample_files/spk_json.json\", \"r\") as spk_file:\n",
     "  spk_json = json.load(spk_file)"
@@ -261,10 +364,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
+   "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
