added edges as region for ideal case

--- a/notebooks/lv/tests/test_metrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_metrics_ideal.ipynb
@@ -16,7 +16,10 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "from project_heart.enums import *"
+    "from project_heart.enums import *\n",
+    "\n",
+    "float_formatter = \"{:.5f}\".format\n",
+    "np.set_printoptions(formatter={'float_kind':float_formatter})"
    ]
   },
   {
@@ -42,23 +45,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv = LV.from_file(filepath, log_level=logging.DEBUG)\n",
-    "lv.identify_regions(LV_GEO_TYPES.IDEAL,\n",
-    "    apex_base_args={\"ab_ql\":0.03, \"ab_qh\":0.90},\n",
-    "    endo_epi_args={\"threshold\":85,})\n",
-    "lv.plot(\"mesh\", \n",
-    "        scalars=LV_MESH_DATA.SURFS,\n",
-    "        container=\"points\",\n",
+    "lv = LV.from_file(filepath, geo_type=LV_GEO_TYPES.IDEAL, log_level=logging.DEBUG)\n",
+    "lv.identify_regions(log_level=logging.DEBUG)\n",
+    "\n",
+    "lv.plot(\"surface\", \n",
+    "        scalars=LV_MESH_DATA.SURFS_DETAILED,\n",
+    "        # container=\"points\",\n",
     "        show_edges=True,\n",
     "        categorical=True,\n",
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
     "        pretty=False,\n",
-    "        vnodes=[\n",
-    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
-    "            ],\n",
+    "        cmap=\"jet\",\n",
+    "        vnodes=[[lv.VIRTUAL_NODES.BASE, {\"color\":\"red\"}], [lv.VIRTUAL_NODES.APEX, {\"color\":\"green\"}] ]\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot(\"surface\", \n",
+    "        scalars=LV_MESH_DATA.SURFS,\n",
+    "        # container=\"points\",\n",
+    "        show_edges=True,\n",
+    "        categorical=True,\n",
+    "        split_sharp_edges=True,\n",
+    "        smooth_shading=False,\n",
+    "        pretty=False,\n",
+    "        cmap=\"jet\",\n",
+    "        vnodes=[[lv.VIRTUAL_NODES.BASE, {\"color\":\"red\"}], [lv.VIRTUAL_NODES.APEX, {\"color\":\"green\"}] ]\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.REGIONS.BASE_BORDER_ENDO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.get_virtual_node(lv.VIRTUAL_NODES.BASE)"
    ]
   },
   {
@@ -561,10 +598,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
+   "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
