added new option for create_speckles

--- a/notebooks/lv/tests/test_metrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_metrics_ideal.ipynb
@@ -33,13 +33,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create speckles"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -59,6 +52,104 @@
     "        cmap=\"jet\",\n",
     "        vnodes=[[lv.VIRTUAL_NODES.BASE, {\"color\":\"red\"}], [lv.VIRTUAL_NODES.APEX, {\"color\":\"green\"}] ]\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = lv.create_speckles(\n",
+    "        collection=\"LA\", # longitudinal axis collection\n",
+    "        group=\"base\",    # base region\n",
+    "        name=\"endo\",     # at endocardium\n",
+    "        from_nodeset=LV_SURFS.BASE_BORDER_ENDO, # using border (edge for ideal)\n",
+    "        use_all_nodes=True, # skip search for nodes close to 'plane'\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )\n",
+    "_ = lv.create_speckles(\n",
+    "        collection=\"LA\", # longitudinal axis collection\n",
+    "        group=\"base\",    # base region\n",
+    "        name=\"epi\",     # at epicardium\n",
+    "        from_nodeset=LV_SURFS.BASE_BORDER_EPI, # using border (edge for ideal)\n",
+    "        use_all_nodes=True, # skip search for nodes close to 'plane'\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )\n",
+    "\n",
+    "_ = lv.create_speckles(\n",
+    "        collection=\"LA\", # longitudinal axis collection\n",
+    "        group=\"apex\",    # base region\n",
+    "        name=\"endo\",     # at endocardium\n",
+    "        from_nodeset=LV_SURFS.ENDO, # using border (edge for ideal)\n",
+    "        k=0.0,\n",
+    "        d=1.0,\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )\n",
+    "_ = lv.create_speckles(\n",
+    "        collection=\"LA\", # longitudinal axis collection\n",
+    "        group=\"apex\",    # base region\n",
+    "        name=\"epi\",     # at epicardium\n",
+    "        from_nodeset=LV_SURFS.EPI, # using border (edge for ideal)\n",
+    "        use_local_k_ref=True,\n",
+    "        k=0.0,\n",
+    "        d=1.0,\n",
+    "        log_level=logging.DEBUG,\n",
+    "    )\n",
+    "\n",
+    "spks = lv.get_speckles(spk_collection=\"LA\")\n",
+    "lv.plot_speckles(spks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from project_heart.utils.cloud_ops import relate_closest\n",
+    "\n",
+    "_, d = relate_closest(lv.points(), [lv.get_virtual_node(lv.VIRTUAL_NODES.BASE)])\n",
+    "kmin = np.argmax(d)\n",
+    "_, d = relate_closest(lv.points(), [lv.get_virtual_node(lv.VIRTUAL_NODES.APEX)])\n",
+    "kmax = np.argmax(d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.nodes()[kmin], lv.nodes()[kmax]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from project_heart.utils.spatial_utils import project_pt_on_line\n",
+    "\n",
+    "long_line = lv.get_long_line()\n",
+    "a = [project_pt_on_line(k, long_line[0], long_line[1]) for k in lv.points()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create speckles"
    ]
   },
   {
