--- a/notebooks/lv/tests/test_metrics_ideal copy.ipynb
+++ b/notebooks/lv/tests/test_metrics_ideal copy.ipynb
@@ -62,16 +62,16 @@
    "source": [
     "_ = lv.create_speckles(\n",
     "        collection=\"LA\", # longitudinal axis collection\n",
-    "        group=\"base\",    # base region\n",
-    "        name=\"endo\",     # at endocardium\n",
+    "        group=\"endo\",     # at endocardium\n",
+    "        name=\"base\",    # base region\n",
     "        from_nodeset=LV_SURFS.BASE_BORDER_ENDO, # using border (edge for ideal)\n",
     "        use_all_nodes=True, # skip search for nodes close to 'plane'\n",
     "        log_level=logging.DEBUG,\n",
     "    )\n",
     "_ = lv.create_speckles(\n",
     "        collection=\"LA\", # longitudinal axis collection\n",
-    "        group=\"base\",    # base region\n",
-    "        name=\"epi\",     # at epicardium\n",
+    "        group=\"epi\",     # at epicardium\n",
+    "        name=\"base\",    # base region\n",
     "        from_nodeset=LV_SURFS.BASE_BORDER_EPI, # using border (edge for ideal)\n",
     "        use_all_nodes=True, # skip search for nodes close to 'plane'\n",
     "        log_level=logging.DEBUG,\n",
@@ -79,8 +79,8 @@
     "\n",
     "_ = lv.create_speckles(\n",
     "        collection=\"LA\", # longitudinal axis collection\n",
-    "        group=\"apex\",    # base region\n",
-    "        name=\"endo\",     # at endocardium\n",
+    "        group=\"endo\",     # at endocardium\n",
+    "        name=\"apex\",    # base region\n",
     "        from_nodeset=LV_SURFS.ENDO, # using border (edge for ideal)\n",
     "        k=0.0,\n",
     "        d=1.0,\n",
@@ -88,14 +88,15 @@
     "    )\n",
     "_ = lv.create_speckles(\n",
     "        collection=\"LA\", # longitudinal axis collection\n",
-    "        group=\"apex\",    # base region\n",
-    "        name=\"epi\",     # at epicardium\n",
+    "        group=\"epi\",     # at epicardium\n",
+    "        name=\"apex\",    # base region\n",
     "        from_nodeset=LV_SURFS.EPI, # using border (edge for ideal)\n",
     "        use_local_k_ref=True,\n",
     "        k=0.0,\n",
     "        d=1.0,\n",
     "        log_level=logging.DEBUG,\n",
     "    )\n",
+    "\n",
     "\n",
     "spks = lv.get_speckles(spk_collection=\"LA\")\n",
     "lv.plot_speckles(spks)"
@@ -107,12 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_heart.utils.cloud_ops import relate_closest\n",
+    "apex_spk = lv.get_speckles(spk_collection=\"LA\", spk_group=\"endo\", spk_name=\"apex\")\n",
+    "base_spk = lv.get_speckles(spk_collection=\"LA\", spk_group=\"endo\", spk_name=\"base\")\n",
     "\n",
-    "_, d = relate_closest(lv.points(), [lv.get_virtual_node(lv.VIRTUAL_NODES.BASE)])\n",
-    "kmin = np.argmax(d)\n",
-    "_, d = relate_closest(lv.points(), [lv.get_virtual_node(lv.VIRTUAL_NODES.APEX)])\n",
-    "kmax = np.argmax(d)\n"
+    "lv.compute_base_apex_ref_over_timesteps(apex_spk, base_spk)"
    ]
   },
   {
@@ -121,19 +120,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.nodes()[kmin], lv.nodes()[kmax]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from project_heart.utils.spatial_utils import project_pt_on_line\n",
+    "apex_spks = lv.get_speckles(spk_collection=\"LA\", spk_name=\"apex\")\n",
+    "base_spks = lv.get_speckles(spk_collection=\"LA\", spk_name=\"base\")\n",
     "\n",
-    "long_line = lv.get_long_line()\n",
-    "a = [project_pt_on_line(k, long_line[0], long_line[1]) for k in lv.points()]"
+    "lv.compute_longitudinal_distance(apex_spks, base_spks)"
    ]
   },
   {
@@ -142,7 +132,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
+    "lv.plot_metric(lv.STATES.LONGITUDINAL_DISTANCE, plot_infos=[\"group\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.plot_longitudinal_line(t=1.1, points_kwargs=dict(point_size=400))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.explainable_metrics.all(lv.STATES.LONGITUDINAL_DISTANCE)"
    ]
   },
   {
