some updates - final computed values match expected results

--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -23,19 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from project_heart.examples import get_lv_ideal\n",
-    "# lv = get_lv_ideal(save_spk_dict=True)\n",
-    "# # lv.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from project_heart.examples import get_lv_typeA\n",
-    "lv = get_lv_typeA(save_spk_dict=True)\n",
+    "from project_heart.examples import get_lv_ideal\n",
+    "lv = get_lv_ideal(save_spk_dict=True)\n",
     "# lv.plot()"
    ]
   },
@@ -64,12 +53,12 @@
     "        \"radial_distance\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"approach\":\"moving_vector\",\n",
-    "            \"reduce_by\":{\"group\", \"name\"},\n",
+    "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"radial_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"approach\":\"moving_centers\",\n",
-    "            \"reduce_by\":{\"group\", \"name\"},\n",
+    "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"wall_thickness\": {\n",
     "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"circ-6\"},\n",
@@ -90,7 +79,7 @@
     "        \"global_longitudinal_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"long-1\"},\n",
     "            \"approach\":\"k_ids\",\n",
-    "            \"reduce_by\":{\"group\"},\n",
+    "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"circumferential_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
@@ -98,7 +87,7 @@
     "            },\n",
     "        \"global_circumferential_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-1\"},\n",
-    "            \"reduce_by\":{\"group\"},\n",
+    "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"angle_rotation\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
@@ -114,7 +103,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df.to_csv(\"test1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spks = lv.get_speckles(spk_collection=\"circ-1\")\n",
+    "# lv.plot_speckles(spks,  show_clusters=True, show_clusters_centers=True)"
    ]
   }
  ],
