added apex_base_over_timesteps to extract_metrics

--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -24,8 +24,16 @@
    "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_ideal\n",
-    "lv = get_lv_ideal(save_spk_dict=True)\n",
-    "# lv.plot()"
+    "lv = get_lv_ideal(save_spk_dict=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lv.speckles.to_json(\"./lv_ideal_speckles.json\")"
    ]
   },
   {
@@ -43,6 +51,10 @@
    "source": [
     "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
+    "        \"apex_base_over_timesteps\": {\n",
+    "            \"apex_spks\": {\"spk_name\":\"apex\", \"spk_group\":\"endo\", \"spk_collection\":\"LA\"},\n",
+    "            \"base_spks\": {\"spk_name\":\"base\", \"spk_group\":\"endo\", \"spk_collection\":\"LA\"},\n",
+    "            },\n",
     "        \"longitudinal_distance\": {\n",
     "            \"apex_spks\": {\"spk_name\":\"apex\", \"spk_collection\":\"LA\"},\n",
     "            \"base_spks\": {\"spk_name\":\"base\", \"spk_collection\":\"LA\"},\n",
