--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
-    "lv = get_lv_typeA()"
+    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spks = lv.get_speckles(spk_collection=\"circ-6\", spk_group=\"endo\")"
+    "# spks = lv.get_speckles(spk_collection=\"circ-6\", spk_group=\"endo\")"
    ]
   },
   {
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "spks = lv.get_speckles(spk_collection=\"circ-6\", spk_group=\"endo\")\n",
     "lv.plot_speckles(spks)"
    ]
   },
@@ -124,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"test1.csv\")"
+    "df.to_csv(\"test_typeA.csv\")"
    ]
   },
   {
