--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV_RegionIdentifier.identify_regions_typeA:Identifying regions from 'type A' geometry.\n",
+      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(endo_base): 487\n",
+      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(epi_base): 507\n"
+     ]
+    }
+   ],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
     "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)"
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +48,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spks = lv.get_speckles(spk_collection=\"circ-6\", spk_group=\"endo\")\n",
-    "lv.plot_speckles(spks)"
+    "# names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
+    "k = 0.89\n",
+    "d = 1.5\n",
+    "spks1 = lv.create_speckles(\n",
+    "            collection=\"MANUAL_CALC_CIRC_6\",\n",
+    "            group=\"endo\",\n",
+    "            name=\"superbase\",\n",
+    "            from_nodeset=LV_SURFS.ENDO,\n",
+    "            d=d,\n",
+    "            k=k,\n",
+    "            normal_to=[0.0, 0.0, 1.0],\n",
+    "            n_subsets=6,\n",
+    "            subsets_criteria=\"angles\",\n",
+    "            cluster_criteria=\"angles3\",\n",
+    "            n_clusters=16,\n",
+    "            t=0.0,\n",
+    "        )\n",
+    "_ = lv.create_speckles(\n",
+    "            collection=\"MANUAL_CALC_CIRC_6\",\n",
+    "            group=\"epi\",\n",
+    "            name=\"superbase\",\n",
+    "            from_nodeset=LV_SURFS.EPI,\n",
+    "            d=d,\n",
+    "            k=k,\n",
+    "            normal_to=[0.0, 0.0, 1.0],\n",
+    "            n_subsets=6,\n",
+    "            subsets_criteria=\"angles\",\n",
+    "            cluster_criteria=\"angles3\",\n",
+    "            n_clusters=16,\n",
+    "            t=0.0,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_CIRC_6\")\n",
+    "# lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = lv.create_speckles(\n",
+    "            collection=\"MANUAL_CALC_LONG_1\",\n",
+    "            group=\"endo\",\n",
+    "            name=\"0.0\",\n",
+    "            from_nodeset=LV_SURFS.ENDO,\n",
+    "            exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
+    "            d=1.00,\n",
+    "            k=0.5,\n",
+    "            normal_to=[1.0, 0.0, 0.0],\n",
+    "            n_subsets=0,\n",
+    "            subsets_criteria=\"z2\",\n",
+    "            cluster_criteria=\"z2\",\n",
+    "            n_clusters=30,\n",
+    "            t=0.0,\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_LONG_1\")\n",
+    "# lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
    ]
   },
   {
@@ -55,9 +137,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV:Computing apex_base_over_timesteps.\n",
+      "INFO:LV.BaseMetricsComputations.compute_base_apex_ref_over_timesteps:Computing apex and base virtual nodes over timesteps\n",
+      "INFO:LV:Extracting volume.\n",
+      "INFO:LV:Extracting longitudinal_distance.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONGITUDINAL_DISTANCE'.\n",
+      "INFO:LV.BaseMetricsComputations:Computing 'LV_STATES.LONGITUDINAL_DISTANCE' with approach 'centroid' with axis aligment set to 'False'.\n",
+      "INFO:LV.BaseMetricsComputations:Computing 'LV_STATES.LONGITUDINAL_DISTANCE' with approach 'centroid' with axis aligment set to 'False'.\n",
+      "INFO:LV:Extracting radial_distance.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_DISTANCE'\n",
+      "INFO:LV:Extracting radial_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_LENGTH'\n",
+      "INFO:LV:Extracting wall_thickness.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.WALL_THICKNESS'\n",
+      "INFO:LV:Extracting longitudinal_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONG_LENGTH'\n",
+      "INFO:LV:Extracting global_longitudinal_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_LONGITUDINAL_LENGTH'\n",
+      "INFO:LV:Extracting circumferential_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.CIRC_LENGTH'\n",
+      "INFO:LV:Extracting global_circumferential_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH'\n",
+      "INFO:LV:Extracting angle_rotation.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.ROTATION'\n"
+     ]
+    }
+   ],
    "source": [
     "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
@@ -73,18 +185,18 @@
     "            \"reduce_by\":{\"group\"}\n",
     "            },\n",
     "        \"radial_distance\": {\n",
-    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
     "            \"approach\":\"moving_vector\",\n",
     "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"radial_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
     "            \"approach\":\"moving_centers\",\n",
     "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"wall_thickness\": {\n",
-    "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"circ-6\"},\n",
-    "            \"epi_spks\": {\"spk_group\":\"epi\", \"spk_collection\":\"circ-6\"},\n",
+    "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"epi_spks\": {\"spk_group\":\"epi\", \"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
     "            \"approach\":\"radial_distance\",\n",
     "            \"reduce_by\":{\"name\"},\n",
     "            },\n",
@@ -99,12 +211,12 @@
     "                },\n",
     "            },\n",
     "        \"global_longitudinal_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"long-1\"},\n",
+    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_LONG_1\"},\n",
     "            \"approach\":\"k_ids\",\n",
     "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"circumferential_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
     "            \"reduce_by\":{\"group\"},\n",
     "            },\n",
     "        \"global_circumferential_length\": {\n",
@@ -112,7 +224,7 @@
     "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"angle_rotation\": {\n",
-    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
     "            \"reduce_by\":{\"group\", \"name\"},\n",
     "            }\n",
     "        }\n",
@@ -121,11 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"test_typeA.csv\")"
+    "dfoi = df[[\n",
+    "    \"timesteps\",\n",
+    "    lv.STATES.LONGITUDINAL_DISTANCE_ENDO.value, \n",
+    "    lv.STATES.RADIAL_DISTANCE_ENDO_SUPERBASE.value, \n",
+    "    lv.STATES.RADIAL_DISTANCE_EPI_SUPERBASE.value,\n",
+    "    lv.STATES.WALL_THICKNESS_SUPERBASE.value, \n",
+    "    \"global_longitudinal_length_endo_0.0\", \n",
+    "    lv.STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH_ENDO_SUPERBASE.value,     \n",
+    "    ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfoi.to_csv(\"test_0.28_70.00_40.00_LVMYO_HEX8_83648_wr.csv\")"
    ]
   },
   {
@@ -136,6 +265,31 @@
    "source": [
     "# spks = lv.get_speckles(spk_collection=\"circ-1\")\n",
     "# lv.plot_speckles(spks,  show_clusters=True, show_clusters_centers=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39ab7d89ff414378a89fa6f4c45ab390",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(intensity=0.25, position=(0.0, 0.0, 1…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_LONG_1\")\n",
+    "lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
    ]
   }
  ],
