--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +28,45 @@
      "text": [
       "INFO:LV_RegionIdentifier.identify_regions_typeA:Identifying regions from 'type A' geometry.\n",
       "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(endo_base): 487\n",
-      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(epi_base): 507\n"
+      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(epi_base): 388\n"
      ]
     }
    ],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
-    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)"
+    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None,\n",
+    "                  id_region_kwargs={\n",
+    "                       \"border_thresh_base\":2, \n",
+    "                        \"border_thresh_endo\":2, \n",
+    "                        \"border_thresh_epi\":1,\n",
+    "                  })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d3b581901de47ddbd80f1bd5e7b03a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(intensity=0.25, position=(0.0, 0.0, 1…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"surface\", \n",
+    "        scalars=LV_MESH_DATA.SURFS_DETAILED,\n",
+    "        categorical=True,\n",
+    "        )"
    ]
   },
   {
@@ -48,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +145,7 @@
     "            n_subsets=0,\n",
     "            subsets_criteria=\"z2\",\n",
     "            cluster_criteria=\"z2\",\n",
-    "            n_clusters=30,\n",
+    "            n_clusters=40,\n",
     "            t=0.0,\n",
     "        )"
    ]
@@ -137,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
