improved speckles subdivision based on ref_vector

--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:LV_RegionIdentifier.identify_regions_typeA:Identifying regions from 'type A' geometry.\n",
-      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(endo_base): 487\n",
-      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(epi_base): 388\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
     "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None,\n",
@@ -44,24 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3b581901de47ddbd80f1bd5e7b03a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(intensity=0.25, position=(0.0, 0.0, 1…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv.plot(\"surface\", \n",
     "        scalars=LV_MESH_DATA.SURFS_DETAILED,\n",
@@ -71,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,19 +115,20 @@
     "            from_nodeset=LV_SURFS.ENDO,\n",
     "            exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
     "            d=1.00,\n",
-    "            k=0.5,\n",
+    "            k=0.6,\n",
     "            normal_to=[1.0, 0.0, 0.0],\n",
     "            n_subsets=0,\n",
     "            subsets_criteria=\"z2\",\n",
-    "            cluster_criteria=\"z2\",\n",
-    "            n_clusters=40,\n",
+    "            n_clusters=30,\n",
+    "            cluster_criteria=\"angles3\",\n",
+    "            clusters_vector_ref=np.asarray([0,0,1]),\n",
     "            t=0.0,\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,39 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:LV:Computing apex_base_over_timesteps.\n",
-      "INFO:LV.BaseMetricsComputations.compute_base_apex_ref_over_timesteps:Computing apex and base virtual nodes over timesteps\n",
-      "INFO:LV:Extracting volume.\n",
-      "INFO:LV:Extracting longitudinal_distance.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONGITUDINAL_DISTANCE'.\n",
-      "INFO:LV.BaseMetricsComputations:Computing 'LV_STATES.LONGITUDINAL_DISTANCE' with approach 'centroid' with axis aligment set to 'False'.\n",
-      "INFO:LV.BaseMetricsComputations:Computing 'LV_STATES.LONGITUDINAL_DISTANCE' with approach 'centroid' with axis aligment set to 'False'.\n",
-      "INFO:LV:Extracting radial_distance.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_DISTANCE'\n",
-      "INFO:LV:Extracting radial_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_LENGTH'\n",
-      "INFO:LV:Extracting wall_thickness.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.WALL_THICKNESS'\n",
-      "INFO:LV:Extracting longitudinal_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONG_LENGTH'\n",
-      "INFO:LV:Extracting global_longitudinal_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_LONGITUDINAL_LENGTH'\n",
-      "INFO:LV:Extracting circumferential_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.CIRC_LENGTH'\n",
-      "INFO:LV:Extracting global_circumferential_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH'\n",
-      "INFO:LV:Extracting angle_rotation.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.ROTATION'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
@@ -265,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,24 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39ab7d89ff414378a89fa6f4c45ab390",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(intensity=0.25, position=(0.0, 0.0, 1…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_LONG_1\")\n",
     "lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
