--- a/notebooks/lv/tests/test_speckles_typeA.ipynb
+++ b/notebooks/lv/tests/test_speckles_typeA.ipynb
@@ -25,27 +25,9 @@
    "source": [
     "filepath = Path(\"../sample_files/lvhexmesh_typeA.vtk\")\n",
     "lv = LV.from_file(filepath)\n",
-    "lv.identify_regions(LV_GEO_TYPES.TYPE_A,\n",
-    "    endo_epi_args={\"threshold\":85,})\n",
+    "lv.identify_regions(LV_GEO_TYPES.TYPE_A)\n",
     "lv.plot(\"mesh\", \n",
     "        scalars=LV_MESH_DATA.SURFS,\n",
-    "        container=\"points\",\n",
-    "        show_edges=True,\n",
-    "        categorical=True,\n",
-    "        split_sharp_edges=True,\n",
-    "        smooth_shading=False,\n",
-    "        pretty=False,\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.plot(\"mesh\", \n",
-    "        scalars=LV_MESH_DATA.EPI_ENDO,\n",
     "        container=\"points\",\n",
     "        show_edges=True,\n",
     "        categorical=True,\n",
@@ -81,80 +63,75 @@
     "\n",
     "for i, a in enumerate(np.linspace(0, np.pi, 6, endpoint=False)):\n",
     "    \n",
-    "    spk = lv.create_speckles(\n",
-    "        collection=\"long-6\",\n",
-    "        group=\"endo\",\n",
-    "        name=str(i),\n",
-    "        from_nodeset=LV_SURFS.ENDO,\n",
-    "        exclude_nodeset=LV_SURFS.BASE,\n",
-    "        d=1.75,\n",
-    "        k=0.5,\n",
-    "        normal_to=[np.cos(a),np.sin(a),0.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=0.075,\n",
-    "        kmax=0.87,\n",
-    "        log_level=logging.INFO,\n",
-    "    )\n",
-    "    spk_args.append(dict(\n",
-    "        collection=\"long-6\",\n",
-    "        group=\"endo\",\n",
-    "        name=str(i),\n",
-    "        from_nodeset=LV_SURFS.ENDO,\n",
-    "        exclude_nodeset=LV_SURFS.BASE,\n",
-    "        d=1.75,\n",
-    "        k=0.5,\n",
-    "        normal_to=[np.cos(a),np.sin(a),0.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=0.075,\n",
-    "        kmax=0.87,\n",
-    "    ))\n",
+    "        # _ = lv.create_speckles(\n",
+    "        #     collection=\"long-6\",\n",
+    "        #     group=\"endo\",\n",
+    "        #     name=str(i),\n",
+    "        #     from_nodeset=LV_SURFS.ENDO,\n",
+    "        #     exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
+    "        #     d=1.75,\n",
+    "        #     k=0.5,\n",
+    "        #     normal_to=[np.cos(a),np.sin(a),0.0],\n",
+    "        #     n_subsets=6,\n",
+    "        #     subsets_criteria=\"z2\",\n",
+    "        #     cluster_criteria=\"angles3\",\n",
+    "        #     n_clusters=10,\n",
+    "        #     t=0.0,\n",
+    "        #     log_level=logging.WARN,\n",
+    "        # )\n",
+    "        \n",
+    "        # _ = lv.create_speckles(\n",
+    "        #     collection=\"long-6\",\n",
+    "        #     group=\"epi\",\n",
+    "        #     name=str(i),\n",
+    "        #     from_nodeset=LV_SURFS.EPI,\n",
+    "        #     exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
+    "        #     d=2.4,\n",
+    "        #     k=0.5,\n",
+    "        #     normal_to=[np.cos(a),np.sin(a),0.0],\n",
+    "        #     n_subsets=6,\n",
+    "        #     subsets_criteria=\"z2\",\n",
+    "        #     cluster_criteria=\"angles3\",\n",
+    "        #     n_clusters=10,\n",
+    "        #     t=0.0,\n",
+    "        #     log_level=logging.WARN,\n",
+    "        # )\n",
+    "        \n",
+    "        _ = lv.create_speckles(\n",
+    "            collection=\"long-1\",\n",
+    "            group=\"endo\",\n",
+    "            name=str(np.round(np.degrees(a),3)),\n",
+    "            from_nodeset=LV_SURFS.ENDO,\n",
+    "            exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
+    "            d=1.75,\n",
+    "            k=0.6,\n",
+    "            normal_to=[np.cos(a),np.sin(a),0.0],\n",
+    "            n_subsets=0,\n",
+    "            subsets_criteria=\"z2\",\n",
+    "            n_clusters=30,\n",
+    "            cluster_criteria=\"angles3\",\n",
+    "            clusters_vector_ref=np.asarray([0,0,1]),\n",
+    "            t=0.0,\n",
+    "            log_level=logging.WARN,\n",
+    "        )\n",
     "\n",
-    "    spk = lv.create_speckles(\n",
-    "        collection=\"long-6\",\n",
-    "        group=\"epi\",\n",
-    "        name=str(i),\n",
-    "        from_nodeset=LV_SURFS.EPI,\n",
-    "        exclude_nodeset=LV_SURFS.BASE,\n",
-    "        d=2.4,\n",
-    "        k=0.5,\n",
-    "        normal_to=[np.cos(a),np.sin(a),0.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=0.075,\n",
-    "        kmax=0.87,\n",
-    "        log_level=logging.INFO,\n",
-    "    )\n",
-    "    spk_args.append(dict(\n",
-    "        collection=\"long-6\",\n",
-    "        group=\"epi\",\n",
-    "        name=str(i),\n",
-    "        from_nodeset=LV_SURFS.EPI,\n",
-    "        exclude_nodeset=LV_SURFS.BASE,\n",
-    "        d=2.4,\n",
-    "        k=0.5,\n",
-    "        normal_to=[np.cos(a),np.sin(a),0.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=0.075,\n",
-    "        kmax=0.87,\n",
-    "    ))\n",
-    "\n",
-    "lv.set_region_from_speckles(\"long-6\", spk_collection=\"long-6\")\n",
-    "lv.plot(\n",
-    "    scalars=\"long-6\", \n",
-    "    categorical=True, \n",
-    "    cmap=\"jet\",\n",
-    "    vnodes=[\n",
-    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
-    "            ],\n",
-    "    )"
+    "        spks = lv.create_speckles(\n",
+    "            collection=\"long-1\",\n",
+    "            group=\"epi\",\n",
+    "            name=str(np.round(np.degrees(a),3)),\n",
+    "            from_nodeset=LV_SURFS.EPI,\n",
+    "            exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
+    "            d=1.75,\n",
+    "            k=0.6,\n",
+    "            normal_to=[np.cos(a),np.sin(a),0.0],\n",
+    "            n_subsets=0,\n",
+    "            subsets_criteria=\"z2\",\n",
+    "            n_clusters=30,\n",
+    "            cluster_criteria=\"angles3\",\n",
+    "            clusters_vector_ref=np.asarray([0,0,1]),\n",
+    "            t=0.0,\n",
+    "            log_level=logging.WARN,\n",
+    "        )"
    ]
   },
   {
@@ -163,81 +140,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
+    "lv.plot_speckles(spks, show_clusters=True, show_clusters_centers=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import logging\n",
+    "# names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
     "\n",
-    "for i, a in enumerate(np.linspace(0.1, 0.90, len(names), endpoint=False)):\n",
+    "# for i, a in enumerate(np.linspace(0.1, 0.90, len(names), endpoint=False)):\n",
     "    \n",
-    "    spk = lv.create_speckles(\n",
-    "        collection=\"circ-6\",\n",
-    "        group=\"endo\",\n",
-    "        name=names[i],\n",
-    "        from_nodeset=LV_SURFS.ENDO,\n",
-    "        d=1.70,\n",
-    "        k=a,\n",
-    "        normal_to=[0.0, 0.0, 1.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=-1.0,\n",
-    "        kmax=-1.0,\n",
-    "        log_level=logging.INFO,\n",
-    "    )\n",
-    "    spk_args.append(dict(\n",
-    "        collection=\"circ-6\",\n",
-    "        group=\"endo\",\n",
-    "        name=names[i],\n",
-    "        from_nodeset=LV_SURFS.ENDO,\n",
-    "        d=1.70,\n",
-    "        k=a,\n",
-    "        normal_to=[0.0, 0.0, 1.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=-1.0,\n",
-    "        kmax=-1.0,\n",
-    "    ))\n",
+    "#     spk = lv.create_speckles(\n",
+    "#         collection=\"circ-6\",\n",
+    "#         group=\"endo\",\n",
+    "#         name=names[i],\n",
+    "#         from_nodeset=LV_SURFS.ENDO,\n",
+    "#         d=1.70,\n",
+    "#         k=a,\n",
+    "#         normal_to=[0.0, 0.0, 1.0],\n",
+    "#         n_subsets=6,\n",
+    "#         subsets_criteria=\"z2\",\n",
+    "#         t=0.0,\n",
+    "#         kmin=-1.0,\n",
+    "#         kmax=-1.0,\n",
+    "#         log_level=logging.INFO,\n",
+    "#     )\n",
+    "#     spk_args.append(dict(\n",
+    "#         collection=\"circ-6\",\n",
+    "#         group=\"endo\",\n",
+    "#         name=names[i],\n",
+    "#         from_nodeset=LV_SURFS.ENDO,\n",
+    "#         d=1.70,\n",
+    "#         k=a,\n",
+    "#         normal_to=[0.0, 0.0, 1.0],\n",
+    "#         n_subsets=6,\n",
+    "#         subsets_criteria=\"z2\",\n",
+    "#         t=0.0,\n",
+    "#         kmin=-1.0,\n",
+    "#         kmax=-1.0,\n",
+    "#     ))\n",
     "\n",
-    "    spk = lv.create_speckles(\n",
-    "        collection=\"circ-6\",\n",
-    "        group=\"epi\",\n",
-    "        name=names[i],\n",
-    "        from_nodeset=LV_SURFS.EPI,\n",
-    "        d=1.70,\n",
-    "        k=a,\n",
-    "        normal_to=[0.0, 0.0, 1.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=-1.0,\n",
-    "        kmax=-1.0,\n",
-    "        log_level=logging.INFO,\n",
-    "    )\n",
-    "    spk_args.append(dict(\n",
-    "        collection=\"circ-6\",\n",
-    "        group=\"epi\",\n",
-    "        name=names[i],\n",
-    "        from_nodeset=LV_SURFS.EPI,\n",
-    "        d=1.70,\n",
-    "        k=a,\n",
-    "        normal_to=[0.0, 0.0, 1.0],\n",
-    "        n_subsets=6,\n",
-    "        subsets_criteria=\"z2\",\n",
-    "        t=0.0,\n",
-    "        kmin=-1.0,\n",
-    "        kmax=-1.0,\n",
-    "    ))\n",
+    "#     spk = lv.create_speckles(\n",
+    "#         collection=\"circ-6\",\n",
+    "#         group=\"epi\",\n",
+    "#         name=names[i],\n",
+    "#         from_nodeset=LV_SURFS.EPI,\n",
+    "#         d=1.70,\n",
+    "#         k=a,\n",
+    "#         normal_to=[0.0, 0.0, 1.0],\n",
+    "#         n_subsets=6,\n",
+    "#         subsets_criteria=\"z2\",\n",
+    "#         t=0.0,\n",
+    "#         kmin=-1.0,\n",
+    "#         kmax=-1.0,\n",
+    "#         log_level=logging.INFO,\n",
+    "#     )\n",
+    "#     spk_args.append(dict(\n",
+    "#         collection=\"circ-6\",\n",
+    "#         group=\"epi\",\n",
+    "#         name=names[i],\n",
+    "#         from_nodeset=LV_SURFS.EPI,\n",
+    "#         d=1.70,\n",
+    "#         k=a,\n",
+    "#         normal_to=[0.0, 0.0, 1.0],\n",
+    "#         n_subsets=6,\n",
+    "#         subsets_criteria=\"z2\",\n",
+    "#         t=0.0,\n",
+    "#         kmin=-1.0,\n",
+    "#         kmax=-1.0,\n",
+    "#     ))\n",
     "\n",
-    "lv.set_region_from_speckles(\"circ-6\", spk_collection=\"circ-6\")\n",
-    "lv.plot(\n",
-    "    scalars=\"circ-6\", \n",
-    "    categorical=True, \n",
-    "    cmap=\"jet\",\n",
-    "    vnodes=[\n",
-    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
-    "            ],\n",
-    "    )"
+    "# lv.set_region_from_speckles(\"circ-6\", spk_collection=\"circ-6\")\n",
+    "# lv.plot(\n",
+    "#     scalars=\"circ-6\", \n",
+    "#     categorical=True, \n",
+    "#     cmap=\"jet\",\n",
+    "#     vnodes=[\n",
+    "#             (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "#             (LV_VIRTUAL_NODES.APEX, \"red\")\n",
+    "#             ],\n",
+    "#     )"
    ]
   },
   {
@@ -246,18 +232,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "with open(\"spk_args_typeA.json\", 'w') as f:\n",
-    "    json.dump(spk_args, f, indent=4)"
+    "# import json\n",
+    "# with open(\"spk_args_typeA.json\", 'w') as f:\n",
+    "#     json.dump(spk_args, f, indent=4)"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +256,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
